Task 8: MultiCreate operation & kafka & metrics
