# internal/server/purchase_server.go
@@ -3,8 +3,12 @@ package server
 import (
 	"context"
 	"errors"
+	"fmt"
+	"github.com/ozonva/ova-purchase-api/internal/kafka"
+	metrics "github.com/ozonva/ova-purchase-api/internal/metric"
 	"github.com/ozonva/ova-purchase-api/internal/purchase"
 	"github.com/ozonva/ova-purchase-api/internal/repo"
+	"github.com/ozonva/ova-purchase-api/internal/utils"
 	api "github.com/ozonva/ova-purchase-api/pkg/ova-purchase-api"
 	"github.com/rs/zerolog/log"
 	"github.com/shopspring/decimal"
@@ -15,18 +19,129 @@ import (
 )
 
 type PurchaseServer struct {
-	repo repo.Repo
+	repo      repo.Repo
+	metrics   metrics.Metrics
+	producer  kafka.KafkaProducer
+	batchSize uint
 	api.UnimplementedPurchaseServiceServer
 }
 
-func NewPurchaseServer(repo repo.Repo) *PurchaseServer {
+func NewPurchaseServer(repo repo.Repo, metrics metrics.Metrics, producer kafka.KafkaProducer, batchSize uint) *PurchaseServer {
 	return &PurchaseServer{
 		repo:                               repo,
+		producer:                           producer,
+		metrics:                            metrics,
+		batchSize:                          batchSize,
 		UnimplementedPurchaseServiceServer: api.UnimplementedPurchaseServiceServer{},
 	}
 }
 
-func (s *PurchaseServer) CreatePurchase(context context.Context, request *api.CreatePurchaseRequest) (*api.CreatePurchaseResponse, error) {
+func (s *PurchaseServer) MultiCreatePurchases(ctx context.Context, request *api.MultiCreatePurchaseRequest) (*api.MultiCreatePurchaseResponse, error) {
+	if err := request.Validate(); err != nil {
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+	purchases := make([]purchase.Purchase, 0, len(request.Purchases))
+	for _, v := range request.GetPurchases() {
+		p := purchase.New()
+		for _, item := range v.Items {
+			_, err := p.Add(purchase.Item{
+				Price:    decimal.NewFromFloat(item.Price),
+				Name:     item.Name,
+				Quantity: uint(item.Quantity),
+			})
+			if err != nil {
+				return nil, err
+			}
+		}
+		purchases = append(purchases, p)
+	}
+	batches, err := utils.SplitToBulks(purchases, uint(s.batchSize))
+	if err != nil {
+		return nil, err
+	}
+	ids := make([]uint64, 0, len(purchases))
+	for _, batch := range batches {
+		added, err := s.repo.AddPurchases(ctx, batch)
+		if err != nil {
+			return nil, err
+		}
+		ids = append(added, added...)
+	}
+
+	err = s.producer.Send(kafka.NewMessage(kafka.MultiCreatePurchase, ids))
+	if err != nil {
+		return nil, err
+	}
+
+	s.metrics.MultiCreatePurchaseCounterInc()
+
+	return &api.MultiCreatePurchaseResponse{
+		Ids: ids,
+	}, nil
+}
+
+func (s *PurchaseServer) UpdatePurchase(ctx context.Context, request *api.UpdatePurchaseRequest) (*api.DescribePurchaseResponse, error) {
+	p, err := s.repo.DescribePurchase(ctx, request.Id)
+	if err != nil {
+		if errors.Is(err, repo.PurchaseNotFoundError) {
+			return nil, status.Error(codes.NotFound, err.Error())
+		}
+	}
+	mapItems := make(map[uint64]purchase.Item)
+	for _, item := range p.Items {
+		mapItems[item.Id] = item
+	}
+	for _, item := range request.Items {
+		if exist, ok := mapItems[item.Id]; ok {
+			if _, err = p.Remove(item.Id); err != nil {
+				return nil, err
+			}
+			if item.Quantity == 0 {
+				continue
+			}
+			exist.Name = item.Name
+			exist.Price = decimal.NewFromFloat(item.Price)
+			exist.Quantity = uint(item.Quantity)
+			if _, err = p.Add(exist); err != nil {
+				return nil, err
+			}
+		} else {
+			return nil, status.Error(codes.NotFound, fmt.Sprintf("Item with id = %d not found in this purchases", item.Id))
+		}
+	}
+	if err = s.repo.UpdatePurchase(ctx, *p); err != nil {
+		return nil, err
+	}
+	total, _ := p.Total.Float64()
+	items := make([]*api.DescribePurchaseResponse_Item, 0)
+	for _, item := range p.Items {
+		price, _ := item.Price.Float64()
+		items = append(items, &api.DescribePurchaseResponse_Item{
+			Id:       item.Id,
+			Name:     item.Name,
+			Price:    price,
+			Quantity: uint32(item.Quantity),
+		})
+	}
+	err = s.producer.Send(kafka.NewMessage(kafka.UpdatePurchase, *p))
+
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to send event to Kafka")
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	s.metrics.UpdatePurchaseCounterInc()
+	return &api.DescribePurchaseResponse{
+		Id:        p.Id,
+		Total:     total,
+		CreatedAt: timestamppb.New(p.CreatedAt),
+		UpdatedAt: timestamppb.New(p.UpdatedAt),
+		Status:    api.PurchaseStatus(p.Status),
+		Items:     items,
+	}, nil
+}
+
+func (s *PurchaseServer) CreatePurchase(context context.Context, request *api.CreatePurchaseRequest) (*api.DescribePurchaseResponse, error) {
 	if err := request.Validate(); err != nil {
 		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
@@ -51,17 +166,23 @@ func (s *PurchaseServer) CreatePurchase(context context.Context, request *api.Cr
 		return nil, err
 	}
 	total, _ := created.Total.Float64()
-	items := make([]*api.CreatePurchaseResponse_Item, 0)
+	items := make([]*api.DescribePurchaseResponse_Item, 0)
 	for _, item := range created.Items {
 		price, _ := item.Price.Float64()
-		items = append(items, &api.CreatePurchaseResponse_Item{
+		items = append(items, &api.DescribePurchaseResponse_Item{
 			Id:       item.Id,
 			Name:     item.Name,
 			Price:    price,
 			Quantity: uint32(item.Quantity),
 		})
 	}
-	return &api.CreatePurchaseResponse{
+	err = s.producer.Send(kafka.NewMessage(kafka.CreatePurchase, *created))
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to send event to Kafka")
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+	s.metrics.CreatePurchaseCounterInc()
+	return &api.DescribePurchaseResponse{
 		Id:        id,
 		Total:     total,
 		CreatedAt: timestamppb.New(created.CreatedAt),
@@ -137,12 +258,25 @@ func (s *PurchaseServer) DescribePurchase(context context.Context, request *api.
 }
 
 func (s *PurchaseServer) RemovePurchase(context context.Context, request *api.RemovePurchaseRequest) (*emptypb.Empty, error) {
-	err := s.repo.RemovePurchase(context, request.Id)
+	p, err := s.repo.DescribePurchase(context, request.Id)
 	if err != nil {
 		if errors.Is(err, repo.PurchaseNotFoundError) {
 			return nil, status.Error(codes.NotFound, err.Error())
 		}
 		return nil, err
 	}
+	err = s.repo.RemovePurchase(context, request.Id)
+	if err != nil {
+		if errors.Is(err, repo.PurchaseNotFoundError) {
+			return nil, status.Error(codes.NotFound, err.Error())
+		}
+		return nil, err
+	}
+	err = s.producer.Send(kafka.NewMessage(kafka.RemovePurchase, *p))
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to send event to Kafka")
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+	s.metrics.RemovePurchaseCounterInc()
 	return &emptypb.Empty{}, nil
 }
